Font size for regbutton to avoid overflows

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -227,7 +227,7 @@ table tr:hover {
     background: url("../img/panda.png") no-repeat scroll -7px 0 transparent;
     color: #23441E;
     display: block;
-    font-size: 0.8em;
+    font-size: 0.7em;
     height: 47px;
     margin: -21px 0 0;
     padding: 45px 0 0 59px;
